force-app/main/default/objects/NVM_PCS__c/NVM_PCS__c.object-meta.xml
<CustomObject>
    <description>NVM Post-call survey</description>
    <label>NVM_PCS</label>
    <nameField>
        <displayFormat>NVM_PCS-{0000}</displayFormat>
        <label>NVM_PCS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM_PCS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>