force-app/main/default/objects/NVM_PCS__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NVM_PCS</relationshipName>
    <type>Lookup</type>
</CustomField>