force-app/main/default/objects/NVM_PCS__c/fields/Answer_2__c.field-meta.xml
<CustomField>
    <fullName>Answer_2__c</fullName>
    <label>Answer 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>