force-app/main/default/objects/NVM_PCS__c/fields/Answer_3__c.field-meta.xml
<CustomField>
    <fullName>Answer_3__c</fullName>
    <label>Answer 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>