force-app/main/default/objects/NVM_PCS__c/fields/Answer_3_No__c.field-meta.xml
<CustomField>
    <fullName>Answer_3_No__c</fullName>
    <formula>IF(Answer_3__c == 2,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answer 3 No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>