force-app/main/default/objects/NVM_PCS__c/fields/Answer_3_Yes__c.field-meta.xml
<CustomField>
    <fullName>Answer_3_Yes__c</fullName>
    <formula>If( Answer_3__c ==1,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answer 3 Yes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>