force-app/main/default/objects/NVM_PCS__c/fields/Call_Object_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Call_Object_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Call Object Identifier</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>