force-app/main/default/objects/NVM_PCS__c/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <formula>Vonage_Call_Summary__r.NVMStatsSF__CallDisposition__c</formula>
    <label>Call Result</label>
    <type>Text</type>
</CustomField>