force-app/main/default/objects/NVM_PCS__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>Agent__r.Manager.FirstName + &quot; &quot; +  Agent__r.Manager.LastName</formula>
    <label>Manager</label>
    <type>Text</type>
</CustomField>