force-app/main/default/objects/NVM_PCS__c/fields/Question_4__c.field-meta.xml
<CustomField>
    <fullName>Question_4__c</fullName>
    <label>Question 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>