force-app/main/default/objects/NVM_PCS__c/fields/Question_5__c.field-meta.xml
<CustomField>
    <fullName>Question_5__c</fullName>
    <label>Question 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>