force-app/main/default/objects/NVM_PCS__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <formula>Agent__r.Team_Lead__r.FirstName + &quot; &quot; +  Agent__r.Team_Lead__r.LastName</formula>
    <label>Team Lead</label>
    <type>Text</type>
</CustomField>