force-app/main/default/objects/NVM_PCS__c/fields/User_is_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_is_Agent__c</fullName>
    <formula>Agent__r.Id ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User is Agent</label>
    <type>Checkbox</type>
</CustomField>