force-app/main/default/objects/NVM_PCS__c/fields/Vonage_Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Call_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vonage Call Summary</label>
    <referenceTo>NVMStatsSF__NVM_Call_Summary__c</referenceTo>
    <relationshipLabel>NVM_PCS</relationshipLabel>
    <relationshipName>NVM_PCS</relationshipName>
    <type>Lookup</type>
</CustomField>